--- a/app/src/main/res/layout/activity_match__setup.xml
+++ b/app/src/main/res/layout/activity_match__setup.xml
@@ -7,7 +7,7 @@
     tools:context=".View.Activities.Match_Setup">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvMatchSetup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/tvMatchSetup">
 
     </FrameLayout>
 
