--- a/app/src/main/res/layout/fragment_scenario__how__won_.xml
+++ b/app/src/main/res/layout/fragment_scenario__how__won_.xml
@@ -8,32 +8,6 @@
     tools:layout_editor_absoluteY="81dp">
 
 
-    <ImageView
-        android:id="@+id/ivUnfocredError"
-        android:layout_width="125dp"
-        android:layout_height="126dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
-        android:src="@drawable/serv_icon"
-        app:layout_constraintBottom_toTopOf="@+id/ivWinner"
-        app:layout_constraintEnd_toStartOf="@+id/divider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/labelHowWon" />
-
-    <ImageView
-        android:id="@+id/ivForcedError"
-        android:layout_width="125dp"
-        android:layout_height="126dp"
-        android:layout_marginBottom="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/serv_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/divider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivWinner" />
-
     <TextView
         android:id="@+id/labelHowWon"
         android:layout_width="wrap_content"
@@ -43,7 +17,7 @@
         android:layout_marginTop="16dp"
         android:text="How did they win the point?"
         android:textColor="@color/colorTextBlack"
-        android:textSize="18sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,60 +38,52 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="395dp"
+        android:layout_height="1dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
+
     <ImageView
         android:id="@+id/ivWinner"
         android:layout_width="125dp"
-        android:layout_height="126dp"
+        android:layout_height="125dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/winner" />
+
+    <ImageView
+        android:id="@+id/ivForcedError"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/serv_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider3"
+        app:srcCompat="@drawable/forced_error" />
+
+    <ImageView
+        android:id="@+id/ivUnforcedError"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divider"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/labelUnforcedError"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="UNFORCED ERROR"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/ivUnfocredError"
-        app:layout_constraintStart_toStartOf="@+id/ivUnfocredError"
-        app:layout_constraintTop_toBottomOf="@+id/ivUnfocredError" />
-
-    <TextView
-        android:id="@+id/labelWinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="WINNER"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/ivWinner"
-        app:layout_constraintStart_toStartOf="@+id/ivWinner"
-        app:layout_constraintTop_toBottomOf="@+id/ivWinner" />
-
-    <TextView
-        android:id="@+id/labelForcedError"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="FORCED ERROR"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/ivForcedError"
-        app:layout_constraintStart_toStartOf="@+id/ivForcedError"
-        app:layout_constraintTop_toBottomOf="@+id/ivForcedError" />
+        app:layout_constraintTop_toBottomOf="@+id/divider3"
+        app:srcCompat="@drawable/unforced_error" />
 
 </android.support.constraint.ConstraintLayout>
