--- a/app/src/main/res/layout/fragment_scenario__second_serv_.xml
+++ b/app/src/main/res/layout/fragment_scenario__second_serv_.xml
@@ -2,33 +2,19 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.Activities.Login_Menu"
     tools:layout_editor_absoluteY="81dp">
 
 
-    <TextView
-        android:id="@+id/labelAce3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="ACE"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwAce"
-        app:layout_constraintStart_toStartOf="@+id/iwAce"
-        app:layout_constraintTop_toBottomOf="@+id/iwAce" />
-
     <ImageView
         android:id="@+id/iwFault"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:elevation="5dp"
-        android:src="@drawable/serv_icon"
+        android:src="@drawable/fault"
         app:layout_constraintBottom_toTopOf="@+id/iwIn"
         app:layout_constraintStart_toEndOf="@+id/iwIn" />
 
@@ -37,7 +23,7 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:elevation="5dp"
-        android:src="@drawable/serv_icon"
+        android:src="@drawable/ace"
         app:layout_constraintBottom_toTopOf="@+id/iwIn"
         app:layout_constraintEnd_toStartOf="@+id/iwIn" />
 
@@ -50,18 +36,19 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:elevation="5dp"
-        android:src="@drawable/serv_icon"
+        android:src="@drawable/in_play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.55" />
 
     <ImageView
         android:id="@+id/iwFootFault"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:elevation="5dp"
-        android:src="@drawable/serv_icon"
+        android:src="@drawable/footfault"
         app:layout_constraintEnd_toStartOf="@+id/iwIn"
         app:layout_constraintTop_toBottomOf="@+id/iwIn" />
 
@@ -70,27 +57,12 @@
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:elevation="5dp"
-        android:src="@drawable/serv_icon"
+        android:src="@drawable/service_winner"
         app:layout_constraintStart_toEndOf="@+id/iwIn"
         app:layout_constraintTop_toBottomOf="@+id/iwIn" />
 
     <TextView
-        android:id="@+id/labelAce"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="ACE"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwAce"
-        app:layout_constraintStart_toStartOf="@+id/iwAce"
-        app:layout_constraintTop_toBottomOf="@+id/iwAce" />
-
-    <TextView
-        android:id="@+id/labelFirstServ"
+        android:id="@+id/labelSecondServ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -98,70 +70,10 @@
         android:layout_marginTop="16dp"
         android:text="Second Serv"
         android:textColor="@color/colorTextBlack"
-        android:textSize="18sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/labelFault"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="FAULT"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwFault"
-        app:layout_constraintStart_toStartOf="@+id/iwFault"
-        app:layout_constraintTop_toBottomOf="@+id/iwFault" />
-
-    <TextView
-        android:id="@+id/labelIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="IN"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwIn"
-        app:layout_constraintStart_toStartOf="@+id/iwIn"
-        app:layout_constraintTop_toBottomOf="@+id/iwIn" />
-
-    <TextView
-        android:id="@+id/labelFootFault"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="FOOT FAULT"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwFootFault"
-        app:layout_constraintStart_toStartOf="@+id/iwFootFault"
-        app:layout_constraintTop_toBottomOf="@+id/iwFootFault" />
-
-    <TextView
-        android:id="@+id/labelServiceWinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="SERVICE WINNER"
-        android:textColor="@color/colorTextBlack"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/iwServiceWinner"
-        app:layout_constraintStart_toStartOf="@+id/iwServiceWinner"
-        app:layout_constraintTop_toBottomOf="@+id/iwServiceWinner" />
 
 </android.support.constraint.ConstraintLayout>
