--- a/app/src/main/res/layout/activity_match__setup.xml
+++ b/app/src/main/res/layout/activity_match__setup.xml
@@ -8,13 +8,14 @@
 
     <TextView
         android:id="@+id/tvMatchSetup"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/antonioregular"
         android:text="Match Setup"
+        android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -24,11 +25,13 @@
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
-        android:layout_width="385dp"
-        android:layout_height="496dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMatchSetup">
