--- a/app/src/main/res/layout/fragment_match__setup__teams_.xml
+++ b/app/src/main/res/layout/fragment_match__setup__teams_.xml
@@ -4,38 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Fragments.Match_Setup_Teams_Frag">
+    tools:context=".View.Fragments.Match_Setup_Teams_Frag"
+    tools:layout_editor_absoluteY="81dp">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/antonioregular"
         android:text="Teams"
+        android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnContinue"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:src="@drawable/arrow_right"
         app:backgroundTint="@color/colorPrimary"
         app:elevation="10dp"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etTeam2Player2" />
 
     <TextView
         android:id="@+id/textView7"
@@ -43,19 +49,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/antonioregular"
         android:text="Team 2"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/etTeam1Player2" />
 
     <EditText
         android:id="@+id/etTeam2Player2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -64,24 +69,26 @@
         android:ems="10"
         android:hint="Player 2"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="#000"
         android:textColorHint="#000"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/etTeam2Player"
+        app:layout_constraintStart_toStartOf="@+id/etTeam2Player"
         app:layout_constraintTop_toBottomOf="@+id/etTeam2Player" />
 
     <EditText
         android:id="@+id/etTeam2Player"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="#000"
         android:ems="10"
         android:hint="Player 1"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="#000"
         android:textColorHint="#000"
         android:textSize="16sp"
@@ -91,49 +98,66 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/antonioregular"
         android:text="Team 1"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintBottom_toTopOf="@+id/etTeam1Player1"
+        app:layout_constraintEnd_toEndOf="@+id/etTeam1Player1"
+        app:layout_constraintStart_toStartOf="@+id/etTeam1Player1" />
 
     <EditText
         android:id="@+id/etTeam1Player1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#000"
         android:ems="10"
         android:hint="Player 1"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="#000"
         android:textColorHint="#000"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/etTeam2Player"
-        app:layout_constraintStart_toStartOf="@+id/etTeam2Player"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintBottom_toTopOf="@+id/etTeam1Player2"
+        app:layout_constraintEnd_toEndOf="@+id/etTeam1Player2"
+        app:layout_constraintStart_toStartOf="@+id/etTeam1Player2" />
 
     <EditText
         android:id="@+id/etTeam1Player2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="64dp"
         android:backgroundTint="#000"
         android:ems="10"
         android:hint="Player 2"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="#000"
         android:textColorHint="#000"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/etTeam2Player"
-        app:layout_constraintStart_toStartOf="@+id/etTeam2Player"
-        app:layout_constraintTop_toBottomOf="@+id/etTeam1Player1" />
+        app:layout_constraintBottom_toTopOf="@+id/divider6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/divider6"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
