--- a/app/src/main/res/layout/fragment_scanario__fore_or_back__hand_.xml
+++ b/app/src/main/res/layout/fragment_scanario__fore_or_back__hand_.xml
@@ -11,13 +11,14 @@
 
     <TextView
         android:id="@+id/labelForeOrBackHand"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Forehand or Backhand"
+        android:text="Forehand or Backhand?"
+        android:textAlignment="center"
         android:textColor="@color/colorTextBlack"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -40,7 +41,7 @@
 
     <ImageView
         android:id="@+id/ivBackHand"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -54,7 +55,7 @@
 
     <ImageView
         android:id="@+id/ivForeHand"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
