--- a/app/src/main/res/layout/fragment_scenario__who__won__point_.xml
+++ b/app/src/main/res/layout/fragment_scenario__who__won__point_.xml
@@ -10,13 +10,14 @@
 
     <TextView
         android:id="@+id/labelWhoWon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="Who won the point?"
+        android:textAlignment="center"
         android:textColor="@color/colorTextBlack"
         android:textSize="28sp"
         android:textStyle="bold"
