--- a/app/src/main/res/layout/activity_login_menu.xml
+++ b/app/src/main/res/layout/activity_login_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Activities.Login_Menu"
+    tools:context=".View.Activities.Login_Menu_Act"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
