--- a/app/src/main/res/layout/scoreboardtest.xml
+++ b/app/src/main/res/layout/scoreboardtest.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Activities.Match">
+    tools:context=".View.Activities.Match_Act">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/scoreBoard"
