--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -23,13 +23,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Marcus / Frederikke"
+            android:text="Marcus"
             android:textAlignment="center"
             android:textColor="@color/colorTextWhite"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ivTeam1Serving"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,18 +72,20 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Oliver / Jonas"
             android:textAlignment="center"
             android:textColor="@color/colorTextWhite"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/tvTeam1Names"
-            app:layout_constraintStart_toStartOf="@+id/tvTeam1Names"
+            app:layout_constraintEnd_toStartOf="@+id/ivTeam2Serving"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTeam1Names" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/tvSets"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -94,7 +98,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/tvPoints"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
@@ -107,7 +111,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/tvGames"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -118,8 +122,8 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
-            app:layout_constraintEnd_toStartOf="@+id/textView13"
-            app:layout_constraintStart_toEndOf="@+id/textView10"
+            app:layout_constraintEnd_toStartOf="@+id/tvPoints"
+            app:layout_constraintStart_toEndOf="@+id/tvSets"
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         <TextView
@@ -131,8 +135,8 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam1Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
-            app:layout_constraintStart_toStartOf="@+id/textView10"
+            app:layout_constraintEnd_toEndOf="@+id/tvSets"
+            app:layout_constraintStart_toStartOf="@+id/tvSets"
             app:layout_constraintTop_toTopOf="@+id/tvTeam1Names" />
 
         <TextView
@@ -144,8 +148,8 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView10"
-            app:layout_constraintStart_toStartOf="@+id/textView10"
+            app:layout_constraintEnd_toEndOf="@+id/tvSets"
+            app:layout_constraintStart_toStartOf="@+id/tvSets"
             app:layout_constraintTop_toTopOf="@+id/tvTeam2Names" />
 
         <TextView
@@ -159,8 +163,8 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam1Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView14"
-            app:layout_constraintStart_toStartOf="@+id/textView14"
+            app:layout_constraintEnd_toEndOf="@+id/tvGames"
+            app:layout_constraintStart_toStartOf="@+id/tvGames"
             app:layout_constraintTop_toTopOf="@+id/tvTeam1Names" />
 
         <TextView
@@ -174,8 +178,8 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView14"
-            app:layout_constraintStart_toStartOf="@+id/textView14"
+            app:layout_constraintEnd_toEndOf="@+id/tvGames"
+            app:layout_constraintStart_toStartOf="@+id/tvGames"
             app:layout_constraintTop_toTopOf="@+id/tvTeam2Names" />
 
         <TextView
@@ -187,8 +191,8 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam1Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView13"
-            app:layout_constraintStart_toStartOf="@+id/textView13"
+            app:layout_constraintEnd_toEndOf="@+id/tvPoints"
+            app:layout_constraintStart_toStartOf="@+id/tvPoints"
             app:layout_constraintTop_toTopOf="@+id/tvTeam1Names" />
 
         <TextView
@@ -200,30 +204,29 @@
             android:textColor="@color/colorTextWhite"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Names"
-            app:layout_constraintEnd_toEndOf="@+id/textView13"
-            app:layout_constraintStart_toStartOf="@+id/textView13"
+            app:layout_constraintEnd_toEndOf="@+id/tvPoints"
+            app:layout_constraintStart_toStartOf="@+id/tvPoints"
             app:layout_constraintTop_toTopOf="@+id/tvTeam2Names" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="0dp"
+            android:id="@+id/ivTeam1Serving"
+            android:layout_width="25dp"
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam1Names"
             app:layout_constraintEnd_toStartOf="@+id/divider5"
-            app:layout_constraintStart_toEndOf="@+id/tvTeam1Names"
             app:layout_constraintTop_toTopOf="@+id/tvTeam1Names"
             app:srcCompat="@drawable/web_hi_res_512" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/ivTeam2Serving"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/tvTeam2Names"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/ivTeam1Serving"
+            app:layout_constraintStart_toStartOf="@+id/ivTeam1Serving"
             app:layout_constraintTop_toTopOf="@+id/tvTeam2Names"
             app:srcCompat="@drawable/web_hi_res_512" />
     </android.support.constraint.ConstraintLayout>
