--- a/app/src/main/res/layout/fragment_match__setup__teams_.xml
+++ b/app/src/main/res/layout/fragment_match__setup__teams_.xml
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btnContinue"
+        android:id="@+id/btnContinue3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
