--- a/app/src/main/res/layout/scoreboardtest.xml
+++ b/app/src/main/res/layout/scoreboardtest.xml
@@ -85,7 +85,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTeam1Names" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/tvSets"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -98,7 +98,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/tvPoints"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -111,7 +111,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView6" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/tvGames"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -122,8 +122,8 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
-            app:layout_constraintEnd_toStartOf="@+id/textView13"
-            app:layout_constraintStart_toEndOf="@+id/textView10"
+            app:layout_constraintEnd_toStartOf="@+id/tvPoints"
+            app:layout_constraintStart_toEndOf="@+id/tvSets"
             app:layout_constraintTop_toTopOf="@+id/textView6" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
